<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IPSApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="eventos">Eventos</string>
    <string name="mapa_campus">Mapa do Campos</string>
    <string name="title_activity_eventos">EventosActivity</string>
    <string name="title_activity_eventos_activity2">EventosActivity2</string>
    <string name="drawer_open">"Aberto"</string>
    <string name="drawer_close">"Fechado"</string>
    <string name="sem_novidade">Sem novidades...</string>
    <string name="evento_data">12-Maio | 22h00</string>
    <string name="linha_data">12-Maio</string>
    <string name="title_activity_info_evento">InfoEventoActivity</string>
    <string name="title_activity_mapas">MapasActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="sobre">Sobre...</string>
    <string name="sobre_conteudo">‎Esta aplicação foi desenvolvida pela equipa da BlackBerry Tech Center Setúbal no âmbito de facilitar o acesso às informações da instituição aos alunos, docentes e funcionários do Instituto Politécnico de Setúbal. </string>
    <string name="versao">Versão 1.0</string>
    <string name="versao_info">Nesta versão encontra-se disponível a informação sobre eventos organizados pelo próprio instituto, escolas e serviços como também pontos de interesse no mapa.</string>
	<string name="web">blacberrysetubal.wordpress.com</string>
	<string name="e_mail">tech.center.setubal@gmail.com</string>
    
</resources>
